search fixes Added:  - search before suggestions are added  - processing search with wrong input text Fixed:  - bug when there was filtered data stucks in filtered state after unpicking all filters

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -118,6 +118,7 @@ summary {
   &::after {
     content: "⯆";
     color: $primary-text-color;
+    z-index: -1;
     transition: 300ms;
   }
 }
